@@ -16,6 +16,8 @@
   - VER /R now shows DOSBox-X's Git commit SHA1, in
     addition to the build date and other version
     information shown by the VER command. (Wengier)
+  - The command "Swap CD" now swaps only CD drives (as
+    the name), not all non-floppy drives. (Wengier)
   - Fixed that joystick may not work with the setting
     "usescancodes=auto" when a non-US keyboard layout
     is activated on the SDL1 build. (Wengier)
